--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "compressorjs": "^1.2.1",
     "firebase": "^10.1.0",
     "lightbox.js-react": "^0.6.4",
     "react": "^18.2.0",
