--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
+    "watermarkjs": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
